test/files/neg/t4079.check
t4079_2.scala:2: error: implicit error;
!I f: Functor[List[?]]
  Cat.compose[List,Option].Functor
                           ^
1 error
